# DS-Lab-Assignment

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh  todo.md
app/: CMakeLists.txt  client.py  server.c
app/client/: client.py
app/client/src/: netUtil.py  netUtils.py  util.py  utils.py
include/DS-Lab-Assignment/: netUtils.h  services.h  util.h  utils.h
include/DS-Lab-Assignment/dbms/: dbms.h  dbmsUtils.h
include/DS-MandatoryExercise/: netUtils.h  utils.h
python/: client.py  serverWS.py  tests.py
python/app/: client.py
python/client/app/: client.py
python/client/src/: netUtils.py  utils.py
python/src/: util.py
src/: CMakeLists.txt  netUtil.c  netUtils.c  netUtils.py  services.c  util.c  utils.c
src/dbms/: dbms.c  dbmsUtils.c
test/: CMakeLists.txt  testDbms.c
